<resources>
    <string name="app_name">乐喜</string>
    <string name="text_user_login">登录</string>
    <string name="title_sidebar">乐喜</string>
    <string name="text_settings">设置</string>
    <string name="title_shopcart">购物车</string>
    <string name="title_login">登录</string>
    <string name="text_phone_login">手机注册</string>
    <string name="phone_num">请输入手机号</string>
    <string name="password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="quick_login">一键登录</string>
    <string name="text_login_wechat">微信登录</string>
    <string name="text_login_sina">微博</string>
    <string name="text_login_qq">QQ</string>
    <string name="text_register">注册</string>
    <string name="text_check_code">请输入动态码</string>
    <string name="title_register">注册</string>
    <string name="text_get_check_code">获取动态码</string>
    <string name="text_net_error">网络异常</string>
    <string name="text_phone_null">请输入手机号</string>
    <string name="text_password_null">请输入密码</string>
    <string name="text_favorite">喜欢</string>
    <string name="text_purchase">购买</string>
    <string name="text_share">分享</string>
    <string name="bottom_bar_title0">首页</string>
    <string name="bottom_bar_title1">发现</string>
    <string name="bottom_bar_title2">购物车</string>
    <string name="bottom_bar_title3">我的</string>
    <string name="text_mine_activity">动态</string>
    <string name="title_forget_password">找回密码</string>
    <string name="text_complete">完成</string>
    <string name="tex_hint_new_password">请输入新密码</string>
    <string name="text_preview_and_edit_info">查看并编辑个人资料</string>
    <string name="text_link">连接</string>
    <string name="text_please_input">请输入</string>
    <string name="text_band_mobile">手机绑定</string>
    <string name="text_find_freinds">找朋友</string>
    <string name="text_setting_acount">账户</string>
    <string name="text_my_orders">我的订单</string>
    <string name="text_order_address">收货地址</string>
    <string name="text_setting_more">更多</string>
    <string name="text_serve_contract">服务协议</string>
    <string name="text_private_items">隐私条款</string>
    <string name="text_setting_logout">退出登录</string>
    <string name="title_setting">设置</string>
    <string name="title_discover">发现</string>
    <string name="tvSpecification">尺寸</string>
    <string name="color_category">颜色</string>
    <string name="text_share_goods">分享这件礼品</string>
    <string name="text_copy_link">复制链接</string>
    <string name="text_wish_order">心愿单</string>
    <string name="text_select_spec_size">请选择规格和尺码</string>
    <string name="text_description">描述</string>
    <string name="text_send_address">发货地</string>
    <string name="text_send_time">交货时间</string>
    <string name="text_return_policy">退货政策</string>
    <string name="text_see_all">查看全部</string>
    <string name="text_focus">关注</string>
    <string name="text_focused">已关注</string>
    <string name="text_online_consult">在线咨询</string>
    <string name="text_custom_made">我要订制</string>
    <string name="text_skip">跳过</string>
    <string name="text_welcome">欢迎来到乐喜</string>
    <string name="text_app_description">全球原创设计品位购物平台</string>
    <string name="text_password_login">密码登录</string>
    <string name="text_check_code_login">动态码登录</string>
    <string name="text_no_account">还没有账号?</string>
    <string name="text_click_register">点击注册</string>
    <string name="text_set_password">设置密码</string>
    <string name="title_set_new_password">设置新密码</string>
    <string name="text_confirm">确认</string>
    <string name="text_password_require">8–16位字母和数字组合</string>
    <string name="title_select_country_area">选择国家和地区</string>
    <string name="text_usual_use">常用</string>
    <string name="text_register_set_password">下一步设置密码</string>
    <string name="text_click_login">点击登录</string>
    <string name="text_service_items"><![CDATA[<<服务条款>>]]></string>
    <string name="text_private_item"><![CDATA[<<隐私条款>>]]></string>
    <string name="text_service">服务条款</string>
    <string name="text_privacy">隐私条款</string>
    <string name="title_welcome_to">欢迎来到乐喜</string>
    <string name="text_add_header_pic_hint">有个真实头像，会增加辨识度哦！</string>
    <string name="hint_input_user_name">输入用户名</string>
    <string name="hint_input_birth">输入生日信息</string>
    <string name="text_gender_woman">女</string>
    <string name="text_gender_man">男</string>
    <string name="text_title_gender">性别</string>
    <string name="text_cancel">取消</string>
    <string name="text_qd">确定</string>
    <string name="text_password_not_equal">两次密码不一致</string>
    <string name="text_life_pavilion">生活馆</string>
    <string name="hint_search_text">关键字 / 礼物 / 品牌馆 / 人</string>
    <string name="text_editor_recommend">编辑推荐</string>
    <string name="text_look_all">查看全部</string>
    <string name="text_brand_pavilion">特色品牌馆</string>
    <string name="text_feature_new_goods">优质新品</string>
    <string name="text_explore_collection">集合</string>
    <string name="text_explore_good100">百元好物</string>
    <string name="text_good_design">特惠好设计</string>
    <string name="rationale_photo">需要获取文件权限</string>
    <string name="rationale_camera">需要获取相机与文件权限</string>
    <string name="hint_text_upload_avatar">请先上传头像</string>
    <string name="tex_hint_new_password_again">请再次输入新密码</string>
    <string name="text_open_store_guide">我要开馆</string>
    <string name="text_tou_tiao">开馆\n头条</string>
    <string name="text_guess_win_money">猜图赢现金</string>
    <string name="text_free_slogan">免运，奖励，优惠生活</string>
    <string name="text_today_recommend">今日推荐</string>
    <string name="text_people_recommend">人气推荐</string>
    <string name="text_coupon_center">领券中心</string>
    <string name="text_exemption_mail">包邮专区</string>
    <string name="text_discover_life">发现生活美学</string>
    <string name="text_good_selection">乐喜优选</string>
    <string name="text_zc_manifest">种草清单</string>
    <string name="text_welcome_in_week">本周最受欢迎</string>
    <string name="text_bg_selection_center">挑选乐喜优选优质商品上架\n品位生活，由此开启</string>
    <string name="text_edit_life_house">编辑生活馆</string>
    <string name="text_life_house_title">名称</string>
    <string name="text_life_house_brife">简介</string>
    <string name="text_save">保存</string>
    <string name="text_null_life_house_title">请输入名称</string>
    <string name="text_null_life_house_description">请输入简介</string>
    <string name="text_unshelve_confirm">你确认要下架这件商品吗?</string>
    <string name="text_no_goods_life_house">当前你的生活馆没有商品\n去挑选一些上架吧。</string>
    <string name="title_selection_goods_center">选品中心</string>
    <string name="text_sell">卖</string>
    <string name="text_putaway">上架</string>
    <string name="text_already_putaway">已上架</string>
    <string name="text_look_more_goods">展开查看更多好物</string>
    <string name="text_sort_synthesize">综合排序</string>
    <string name="text_sort_profit">利润</string>
    <string name="text_sort_filter">筛选</string>
    <string name="hint_selection_center_search_text">商品名称 / 关键字</string>
    <string name="text_sort">排序</string>
    <string name="text_synthesise_sort">综合排序</string>
    <string name="text_price">价格</string>
    <string name="text_price_low_up">由低至高</string>
    <string name="text_price_up_low">由高至低</string>
    <string name="text_profit">利润</string>
    <string name="text_no_limit">不限</string>
    <string name="text_filter_condition">筛选</string>
    <string name="text_reset">重置</string>
    <string name="text_range_price">价格区间</string>
    <string name="text_classify">分类</string>
    <string name="text_multi_select">可多选</string>
    <string name="title_show_case">橱窗</string>
    <string name="text_discover_life_description">发掘好物，品位生活,\n寻找搭配灵感,塑造自己的独特风格</string>
    <string name="text_publish_show_window">拼贴我的橱窗</string>
    <string name="text_comment_count">条评论</string>
    <string name="text_guess_like">猜你喜欢</string>
    <string name="text_relate_show_window">相关橱窗</string>
    <string name="text_add_comment">添加评论</string>
    <string name="hint_input_comment">请输入评论</string>
    <string name="text_reply">回复</string>
    <string name="text_praise">赞</string>
    <string name="title_brand_pavilion">品牌馆</string>
    <string name="text_already_like">已喜欢</string>
    <string name="text_enshrine">收藏</string>
    <string name="text_design_pavilion">设计馆</string>
    <string name="text_fans">粉丝</string>
    <string name="text_mine_order">我的订单</string>
    <string name="text_goods_like">喜欢的商品</string>
    <string name="text_show_window_like">喜欢的橱窗</string>
    <string name="text_recent_look_goods">最近查看</string>
    <string name="text_publish_window">拼贴橱窗</string>
    <string name="title_dynamic_activity">动态</string>
    <string name="text_no_dynamic">您还没有任何动态信息</string>
    <string name="text_other_no_dynamic">此用户没有动态信息</string>
    <string name="text_like">喜欢</string>
    <string name="text_can_custom_service">可提供订制化服务</string>
    <string name="text_goods_detail">作品详情</string>
    <string name="text_similar_goods">相似商品</string>
    <string name="text_share_get">立即\n领取</string>
    <string name="text_already_get_coupon">已领取</string>
    <string name="text_get_coupon_success">已领取</string>
    <string name="text_add_shopcart">加入购物车</string>
    <string name="text_order_make">接单订制</string>
    <string name="text_title_color">颜色</string>
    <string name="text_title_size">尺寸</string>
    <string name="text_already_add">已添加</string>
    <string name="title_favorite_goods_person">喜欢该商品的人</string>
    <string name="text_focused_each_other">互相关注</string>
    <string name="text_edit">编辑</string>
    <string name="text_sold_out">该商品已售罄</string>
    <string name="text_settle_account">结算</string>
    <string name="text_add_wish_order">放入心愿单</string>
    <string name="text_remove">移除</string>
    <string name="text_plesse_select_goods">请选择商品</string>
    <string name="title_select_express_address">选择收货地址</string>
    <string name="text_delivery_send">寄送</string>
    <string name="text_order_detail">明细</string>
    <string name="text_continue_commit_order">继续以确认订单</string>
    <string name="text_add_new_address">新的收货地址</string>
    <string name="hint_please_select_consignee_address">请先选择收货地址</string>
    <string name="title_submit_order">提交订单</string>
    <string name="text_loading">加载中...</string>
    <string name="text_subtotal">小计：</string>
    <string name="text_send_address_user">寄送地址</string>
    <string name="text_delivery">配送：</string>
    <string name="text_first_order_discount">首单优惠：</string>
    <string name="text_full_reduce">满减：</string>
    <string name="text_order_total">订单总计</string>
    <string name="text_send_way">配送方式</string>
    <string name="text_select_other_express">选择其它</string>
    <string name="text_select_express">选择物流</string>
    <string name="hint_goods_note">送给他/她，记得添加礼物赠言哦！</string>
    <string name="hint_shop_note">给商家的说明和注意事项</string>
    <string name="text_freight">运费</string>
    <string name="text_pavilion_coupon">设计馆优惠券</string>
    <string name="text_lexi_coupon">乐喜券</string>
    <string name="text_coupon">优惠券</string>
    <string name="text_full_reduce_promotion">满减促销</string>
    <string name="text_get_coupon_packet">选择优惠券红包</string>
    <string name="text_name_address">收件人真实姓名</string>
    <string name="text_mobile_address">手机号</string>
    <string name="text_select_address">选择地区</string>
    <string name="text_detailed_address">详细地址</string>
    <string name="text_live_pen">（笔）</string>
    <string name="text_live_put_money">可提现金额</string>
    <string name="text_live_put">累计已提现：</string>
    <string name="text_put_money">提现</string>
    <string name="text_put_hint">可提现金额超过10元才可提现，每日最多可提现3次</string>
    <string name="text_statements">对账单</string>
    <string name="text_put_record">无提现记录</string>
    <string name="text_skill_services">技术服务费</string>
    <string name="text_put_success">提现成功</string>
    <string name="text_put_place">提现到</string>
    <string name="text_put_time">提现时间</string>
    <string name="text_put_detail">提现明细</string>
    <string name="text_life">乐喜生活馆</string>
    <string name="text_wx_change">微信零钱包</string>
</resources>