<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_eee"
        />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0"
            style="@style/BottomBarStyle"
            android:drawableTop="@drawable/selector_item0"
            android:text="@string/bottom_bar_title0"
            android:textColor="@color/color_6ed7af"
            />


        <Button
            android:id="@+id/button1"
            style="@style/BottomBarStyle"
            android:drawableTop="@drawable/selector_item2"
            android:text="@string/bottom_bar_title2"
            android:textColor="@color/color_666" />

        <Button
            android:id="@+id/button2"
            style="@style/BottomBarStyle"
            android:drawableTop="@drawable/selector_item1"
            android:text="@string/bottom_bar_title1"
            android:textColor="@color/color_666" />

        <Button
            android:id="@+id/button3"
            style="@style/BottomBarStyle"
            android:drawableTop="@drawable/selector_item3"
            android:text="@string/bottom_bar_title3"
            android:textColor="@color/color_666" />

    </LinearLayout>
</LinearLayout>
