<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/imageViewBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        />
    <TextView
        android:id="@+id/textViewSkip"
        android:layout_width="@dimen/dp48"
        android:layout_height="@dimen/dp50"
        android:drawableEnd="@mipmap/icon_skip"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/dp20"
        android:text="@string/text_skip"
        android:textSize="@dimen/sp14"
        android:textColor="@android:color/white"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_below="@+id/textViewSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="26dp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/textView1"
        android:layout_below="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:text="@string/text_welcome"
        android:layout_marginTop="@dimen/dp30"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_below="@id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:text="@string/text_app_description"
        android:layout_marginTop="@dimen/dp15"
        />

    <Button
        android:id="@+id/button0"
        android:layout_above="@+id/linearLayout"
        android:layout_width="@dimen/dp250"
        android:layout_height="@dimen/dp45"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:background="@drawable/corner_bg_white"
        android:text="@string/text_register"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp16"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_above="@+id/button1"
        android:layout_width="@dimen/dp250"
        android:layout_height="@dimen/dp45"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/corner_border_ffffffff"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_wechat"
            android:drawableStart="@mipmap/icon_wechat_white"
            android:drawablePadding="@dimen/dp5"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp30"
        android:layout_marginTop="@dimen/dp20"
        android:background="@null"
        android:layout_centerHorizontal="true"
        android:text="@string/text_user_login"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp16"
        android:textStyle="bold"
        />
</RelativeLayout>