<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.lexivip.lexi.view.CustomHeadView
        android:id="@+id/customHeadView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.lexivip.lexi.view.CustomHeadView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333"
                android:text="@string/text_live_put_money"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_333"
                android:textSize="@dimen/sp12"
                android:text="@string/text_live_pen"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_put_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp24"
            android:textColor="@color/color_ff6666"
            android:text="0.00"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp10" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp15">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_fb9013"
                android:text="@string/text_live_put"
                android:textSize="@dimen/sp12"/>
            <TextView
                android:id="@+id/tv_put"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_fb9013"
                android:textSize="@dimen/sp12"
                android:text="0.00"/>
        </LinearLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginTop="@dimen/dp80"
            android:layout_marginLeft="@dimen/dp40"
            android:layout_marginRight="@dimen/dp40"
            android:background="@drawable/select_5fe4b1_ccc"
            android:layout_marginBottom="@dimen/dp15"
            android:textSize="@dimen/sp16"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:text="@string/text_put_money"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_put_hint"
            android:textSize="@dimen/sp12"
            android:textColor="@color/color_999"
            android:layout_marginBottom="@dimen/dp15"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_statements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp13"
        android:paddingTop="@dimen/dp13"
        android:paddingRight="@dimen/dp15"
        android:paddingLeft="@dimen/dp15"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:background="@android:color/white"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="@dimen/dp15"
            android:layout_height="@dimen/dp15"
            android:background="@mipmap/icon_statements"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333"
            android:text="@string/text_statements"
            android:layout_marginLeft="@dimen/dp10"/>
        <TextView
            android:id="@+id/tv_put_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/sp12"
            android:text="@string/text_put_record"
            android:gravity="right"
            android:textColor="@color/color_999"
            android:layout_marginRight="@dimen/dp5"/>
        <ImageView
            android:layout_width="@dimen/dp9"
            android:layout_height="@dimen/dp15"
            android:background="@mipmap/icon_arrow_more"/>
    </LinearLayout>
</LinearLayout>