<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_f5f7f9"
    >

    <ImageView
        android:id="@+id/imageViewClose"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp40"
        android:background="@null"
        android:paddingEnd="@dimen/dp20"
        android:paddingStart="@dimen/dp20"
        android:src="@mipmap/icon_close_bottom_dialog" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp40"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/text_profit"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp16" />

    <TextView
        android:id="@+id/textViewNoLimit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp14"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp20"
        android:paddingEnd="@dimen/dp20"
        android:layout_below="@+id/textViewTitle"
        android:background="@android:color/white"
        android:text="@string/text_no_limit"
        />

    <TextView
        android:id="@+id/textViewLow2Up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:textColor="@color/color_333"
        android:background="@android:color/white"
        android:textSize="@dimen/sp14"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp20"
        android:paddingEnd="@dimen/dp20"
        android:layout_below="@+id/textViewNoLimit"
        android:text="@string/text_price_low_up"
        />

    <TextView
        android:id="@+id/textViewUp2Low"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:textColor="@color/color_333"
        android:textSize="@dimen/sp14"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp20"
        android:paddingEnd="@dimen/dp20"
        android:layout_below="@+id/textViewLow2Up"
        android:background="@android:color/white"
        android:text="@string/text_price_up_low"
        />
    <include
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp05"
        android:layout_below="@+id/textViewUp2Low"
        layout="@layout/line_color_eee" />
    <View
        android:layout_below="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        />
</RelativeLayout>